@@ -1,5 +1,11 @@
 2002-02-08  Ian Lance Taylor  <ian@airs.com>
 
+	* unix/work.c (fsysdep_get_work_init): Add cmax parameter.  Change
+	all callers.
+	(fsysdep_get_work): Likewise.
+	* system.h (fsysdep_get_work_init): Update declaration.
+	(fsysdep_get_work): Likewise.
+
 	* unix/tcp.c: Use getaddrinfo if available to decide how to call
 	the socket functions.
 	* configure.in: Check for getaddrinfo and struct
